Align config dev/staging/prod

--- a/terraform/environments/dev/backend.conf
+++ b/terraform/environments/dev/backend.conf
@@ -1,2 +1,3 @@
-bucket = "terraform-state-your-project-id-dev"
-prefix = "terraform/state/dev" 
+# Configuration backend pour l'environnement DEV
+bucket  = "terraform-state-dev-data-centralization"
+prefix  = "terraform/state" 
