--- a/terraform/environments/prod/terraform.tfvars.example
+++ b/terraform/environments/prod/terraform.tfvars.example
@@ -2,12 +2,87 @@
 # Copiez ce fichier vers terraform.tfvars et adaptez les valeurs
 # ⚠️  ATTENTION: Configuration critique pour la production
 
-# Configuration globale - À MODIFIER
-project_id   = "votre-project-id-prod"        # Remplacez par votre project ID
-environment  = "prod"
-region       = "europe-west1"
+# Configuration du projet
+project_id       = "your-project-id-prod"      # ID de votre projet GCP
+project_name     = "data-centralization"       # Nom de votre projet
+billing_account  = "XXXXXX-XXXXXX-XXXXXX"     # ID de votre compte de facturation
+environment      = "prod"                      # Ne pas modifier
+region          = "europe-west1"               # Région GCP
 
 # Configuration réseau
+services_subnet_cidr     = "10.2.3.0/24"      # CIDR pour les services
+database_subnet_cidr     = "10.2.4.0/24"      # CIDR pour la base de données
+services_secondary_cidr  = "10.2.5.0/24"      # CIDR secondaire
+vpc_connector_cidr       = "10.8.0.0/28"      # CIDR pour le connecteur VPC
+
+# Configuration Cloud SQL
+database_tier           = "db-custom-4-8192"  # 4 vCPU, 8 GB RAM
+disk_size              = 100                  # Taille du disque en GB
+max_disk_size          = 500                  # Taille maximale du disque en GB
+max_connections        = 200                  # Nombre maximal de connexions
+database_name          = "app_db"             # Nom de la base de données
+database_user          = "app_user"           # Utilisateur de l'application
+backup_location        = "europe-west4"       # Backup dans une autre région
+point_in_time_recovery = true               # Récupération point-in-time activée
+deletion_protection    = true               # Protection contre la suppression
+
+# Configuration Docker
+docker_registry = {
+  server   = "registry.example.com"          # URL de votre registre privé
+  username = "your-username"                 # Nom d'utilisateur
+  password = "your-password"                 # Mot de passe
+}
+docker_image_url = "registry.example.com/your-app:latest"  # URL de votre image
+
+# Configuration monitoring
+notification_emails     = ["prod-team@example.com", "oncall@example.com"]  # Emails pour les notifications
+latency_threshold_ms   = 1000                # Seuil de latence en ms
+error_rate_threshold   = 2                   # Seuil de taux d'erreur
+cpu_threshold         = 0.7                  # Seuil d'utilisation CPU
+memory_threshold      = 0.7                  # Seuil d'utilisation mémoire
+sql_connections_threshold = 150              # Seuil de connexions SQL
+enable_log_sink       = true                 # Activé pour production
+
+# Labels obligatoires
+labels = {
+  environment   = "prod"
+  project       = "data-centralization"
+  team          = "platform"
+  cost-center   = "it-infrastructure"
+  backup        = "required"
+  monitoring    = "critical"
+  compliance    = "required"
+  data-class    = "confidential"
+}
+
+# Configuration backup et disaster recovery
+backup_cross_region        = true            # Backup multi-région
+backup_location_secondary  = "europe-west4"  # Région secondaire
+enable_point_in_time_recovery = true        # PITR activé
+backup_retention_days      = 30             # 30 jours de rétention
+
+# Performance et scaling
+enable_connection_pooling  = true
+max_connections           = 200
+shared_preload_libraries  = "pg_stat_statements,auto_explain"
+
+# Monitoring avancé
+enable_slow_query_log     = true
+slow_query_threshold      = "1s"
+enable_connection_logging = true
+enable_checkpoints_logging = true
+
+# Compliance et sécurité renforcée
+require_ssl               = true
+ssl_mode                 = "ENCRYPTED_ONLY"
+enable_pgaudit           = true
+log_statement            = "all"
+log_min_duration_statement = 1000  # Log requêtes > 1s
+
+# Budget
+budget_amount = 500  # Budget mensuel en euros
+
+# Configuration globale - À MODIFIER
 vpc_cidr_range               = "10.2.0.0/16"
 private_subnet_cidr         = "10.2.1.0/24"
 public_subnet_cidr          = "10.2.2.0/24"
@@ -16,13 +91,7 @@ services_cidr_range         = "10.2.32.0/20"
 authorized_networks         = []                # Pas d'accès direct en prod
 
 # Configuration Cloud SQL - Production (haute performance)
-database_tier                = "db-custom-4-8192"  # 4 vCPU, 8 GB RAM
-disk_size                   = 100                   # 100 GB
-max_disk_size              = 500                   # Limite auto-resize
 high_availability          = true                  # HA obligatoire
-backup_retention_days      = 30                    # 30 jours
-backup_location           = "europe-west4"         # Backup cross-région
-point_in_time_recovery    = true                   # PITR obligatoire
 maintenance_window_day    = 7                      # Dimanche
 maintenance_window_hour   = 2                      # 02:00 UTC
 read_replica_count        = 2                      # 2 réplicas
@@ -36,6 +105,7 @@ cloud_run_max_instances     = 100                  # Maximum 100 instances
 cloud_run_concurrency       = 100                  # 100 requêtes simultanées
 cloud_run_timeout_seconds   = 300                  # Timeout 5 minutes
 cloud_run_cpu_throttling    = false                # Pas de throttling
+allow_public_access         = true                 # Accès public autorisé
 
 # Configuration Artifact Registry
 registry_format             = "DOCKER"
@@ -44,19 +114,15 @@ registry_description        = "Production Docker registry pour centralisation de
 # Configuration monitoring et alertes - À MODIFIER OBLIGATOIREMENT
 enable_monitoring           = true
 alert_email                = "ops-team@votre-entreprise.com"      # Email équipe OPS
-slack_webhook_url          = "https://hooks.slack.com/services/PROD/WEBHOOK"  # Slack PROD
+slack_webhook_url          = "https://hooks.slack.com/services/XXXXX/YYYYY/ZZZZZ"  # Slack PROD
 sms_number                 = "+33123456789"                       # SMS pour alertes critiques
 
 # Monitoring
-notification_emails         = ["prod-alerts@example.com", "oncall@example.com"]
-latency_threshold_ms       = 1000                  # 1 seconde
-error_rate_threshold       = 2                     # 2%
 cpu_threshold             = 0.7                    # 70%
 memory_threshold          = 0.7                    # 70%
 sql_connections_threshold = 200                    # 200 connexions
 
 # Budget
-budget_amount             = 500                    # 500€/mois
 budget_alert_thresholds    = [0.5, 0.8, 0.9, 1.0]  # Alertes progressives
 
 # Sécurité RENFORCÉE
@@ -68,36 +134,16 @@ enable_audit_logs          = true                # Audit logs OBLIGATOIRES
 log_retention_days         = 90                  # Rétention 90 jours
 
 # Configuration spécifique production - CRITIQUE
-deletion_protection        = true                # Protection OBLIGATOIRE
 skip_final_snapshot       = false                # Snapshot OBLIGATOIRE
 enable_performance_insights = true               # Insights OBLIGATOIRES
 enable_query_insights      = true
-
-# Labels OBLIGATOIRES
-labels = {
-  environment   = "prod"
-  project       = "data-centralization"
-  team          = "platform"                     # Remplacez par votre équipe
-  cost-center   = "it-infrastructure"           # Centre de coût IT
-  backup        = "required"
-  monitoring    = "critical"
-  compliance    = "required"
-  data-class    = "confidential"
-}
 
 # Configuration des secrets - Multi-région
 enable_secret_manager      = true
 secret_locations          = ["europe-west1", "europe-west4"]  # Multi-région OBLIGATOIRE
 
-# Configuration backup et disaster recovery
-backup_cross_region        = true                # Cross-région OBLIGATOIRE
-backup_location_secondary  = "europe-west4"
-enable_point_in_time_recovery = true
-
 # Performance OPTIMISÉE
-enable_connection_pooling  = true
 max_connections           = 200                 # Connexions optimisées
-shared_preload_libraries  = "pg_stat_statements,auto_explain"  # Monitoring avancé
 
 # Monitoring COMPLET
 enable_slow_query_log     = true
@@ -106,11 +152,18 @@ enable_connection_logging = true
 enable_checkpoints_logging = true
 
 # Sécurité MAXIMALE
-require_ssl               = true               # SSL OBLIGATOIRE
 ssl_mode                 = "ENCRYPTED_ONLY"    # Chiffrement strict
 enable_pgaudit           = true               # Audit PostgreSQL
 log_statement            = "all"              # Log TOUTES les requêtes
 log_min_duration_statement = 1000             # Log requêtes > 1s
+
+# Variables d'environnement supplémentaires pour l'application
+environment_variables = {
+  "EXTERNAL_API_URL"     = "https://api.production.exemple.com"
+  "SHEETS_API_ENABLED"   = "true"
+  "LOG_LEVEL"           = "WARN"                  # Niveau de log minimal en prod
+  "FEATURE_FLAG_X"      = "disabled"             # Features testées uniquement
+}
 
 # 📝 NOTES IMPORTANTES:
 # - Vérifiez TOUS les emails et webhooks
