--- a/terraform/environments/dev/terraform.tfvars.example
+++ b/terraform/environments/dev/terraform.tfvars.example
@@ -3,8 +3,7 @@
 
 # Configuration du projet
 project_id       = "your-project-id-dev"          # ID de votre projet GCP
-project_name     = "data-centralization"          # Nom de votre projet
-billing_account  = "XXXXXX-XXXXXX-XXXXXX"        # ID de votre compte de facturation
+project_name     = "cloudrun-centralizer"
 environment      = "dev"                          # Ne pas modifier
 region          = "europe-west1"                  # Région GCP
 
@@ -25,6 +24,7 @@ max_disk_size          = 50                      # Taille maximale du disque en 
 max_connections        = "50"                    # Nombre maximal de connexions
 database_name          = "app_db"                # Nom de la base de données
 database_user          = "app_user"              # Utilisateur de l'application
+backup_region          = "europe-west1"
 point_in_time_recovery = false                   # Récupération point-in-time
 
 # Configuration Cloud Run
@@ -44,7 +44,7 @@ docker_image_url = "registry.example.com/your-app:latest"  # URL de votre image
 
 # Configuration monitoring
 notification_emails     = ["dev-team@example.com"]  # Emails pour les notifications
-slack_webhook_url      = "https://hooks.slack.com/services/XXXXX/YYYYY/ZZZZZ"  # Webhook Slack
+
 latency_threshold_ms   = 5000                   # Seuil de latence en ms
 error_rate_threshold   = 10                     # Seuil de taux d'erreur
 cpu_threshold         = 0.9                     # Seuil d'utilisation CPU
@@ -62,98 +62,3 @@ environment_variables = {
   "LOG_LEVEL"           = "DEBUG"
   "FEATURE_FLAG_X"      = "enabled"
 }
-
-# Configuration globale - À MODIFIER
-project_id   = "votre-project-id-dev"           # Remplacez par votre project ID
-environment  = "dev"
-region       = "europe-west1"
-
-# Configuration réseau
-vpc_cidr_range               = "10.0.0.0/16"
-private_subnet_cidr         = "10.0.1.0/24"
-public_subnet_cidr          = "10.0.2.0/24"
-pods_cidr_range             = "10.0.16.0/20"
-services_cidr_range         = "10.0.32.0/20"
-authorized_networks         = [
-  {
-    name  = "dev-office"
-    value = "203.0.113.0/24"              # Remplacez par votre IP office
-  }
-]
-
-# Configuration Cloud SQL - Développement (économique)
-high_availability          = false                 # Pas de HA en dev
-backup_retention_days      = 7                     # 7 jours seulement
-backup_location           = "europe-west1"
-read_replica_count        = 0                      # Pas de réplicas
-replica_tier              = "db-custom-1-2048"
-
-# Configuration Cloud Run - Développement
-cloud_run_concurrency       = 50                   # 50 requêtes simultanées
-cloud_run_timeout_seconds   = 300                  # Timeout 5 minutes
-cloud_run_cpu_throttling    = true                 # Throttling activé
-
-# Configuration Artifact Registry
-registry_format             = "DOCKER"
-registry_description        = "Development Docker registry pour centralisation de données"
-
-# Configuration monitoring et alertes - À MODIFIER
-enable_monitoring           = true
-alert_email                = "dev-team@example.com"     # Remplacez par votre email
-slack_webhook_url          = ""                         # URL Slack optionnelle
-sms_number                 = ""                         # SMS optionnel
-
-# Budget et coûts
-budget_alert_thresholds    = [0.8, 1.0]          # Alertes à 80% et 100%
-
-# Sécurité
-enable_private_ip          = true
-enable_ssl_redirect        = true
-enable_armor               = false                # Pas de Cloud Armor en dev
-allowed_source_ranges      = ["0.0.0.0/0"]
-enable_audit_logs          = false               # Pas d'audit logs en dev
-log_retention_days         = 7                   # Rétention courte
-
-# Configuration spécifique développement
-deletion_protection        = false               # Pas de protection en dev
-skip_final_snapshot       = true                 # Pas de snapshot final
-enable_performance_insights = false              # Pas d'insights en dev
-enable_query_insights      = false
-
-# Labels
-labels = {
-  environment   = "dev"
-  project       = "data-centralization"
-  team          = "platform"                     # Remplacez par votre équipe
-  cost-center   = "development"                  # Remplacez par votre centre de coût
-  backup        = "optional"
-  monitoring    = "basic"
-  compliance    = "not-required"
-  data-class    = "public"
-}
-
-# Configuration des secrets
-enable_secret_manager      = true
-secret_locations          = ["europe-west1"]    # Single région pour dev
-
-# Configuration backup (simplifiée pour dev)
-backup_cross_region        = false
-backup_location_secondary  = ""
-enable_point_in_time_recovery = false
-
-# Performance (basique pour dev)
-enable_connection_pooling  = false
-shared_preload_libraries  = ""                 # Pas de libs supplémentaires
-
-# Monitoring basique
-enable_slow_query_log     = false
-slow_query_threshold      = "5s"               # Seuil élevé
-enable_connection_logging = false
-enable_checkpoints_logging = false
-
-# Sécurité basique
-require_ssl               = false              # SSL optionnel en dev
-ssl_mode                 = "ALLOW_UNENCRYPTED_AND_ENCRYPTED"
-enable_pgaudit           = false              # Pas d'audit en dev
-log_statement            = "none"             # Pas de logs statements
-log_min_duration_statement = -1               # Désactivé 
